--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "daisyui": "^2.31.0"
+        "daisyui": "^2.31.0",
+        "remixicon": "^2.5.0"
     }
 }
