--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.0.6",
-        "autoprefixer": "^10.4.7",
+        "autoprefixer": "^10.4.12",
         "axios": "^0.27",
+        "flowbite": "^1.5.3",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
+        "postcss": "^8.4.16",
+        "tailwindcss": "^3.1.8",
         "vite": "^3.0.0"
     },
     "dependencies": {
         "daisyui": "^2.31.0",
-        "remixicon": "^2.5.0"
+        "flowbite-datepicker": "^1.2.2",
+        "remixicon": "^2.5.0",
+        "tw-elements": "^1.0.0-alpha12"
     }
 }
