Data table added

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "rappasoft/laravel-livewire-tables": "^2.8"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
