--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,16 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "itsgoingd/clockwork": "^5.1",
+        "jantinnerezo/livewire-alert": "^2.2",
         "laravel/framework": "^9.19",
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.0",
         "livewire/livewire": "^2.5",
-        "rappasoft/laravel-livewire-tables": "^2.8"
+        "rappasoft/laravel-livewire-tables": "^2.8",
+        "spatie/laravel-permission": "^5.5",
+        "wire-elements/modal": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
